# GERBER_X3

./: .gitignore  .gitmodules  123.patch  CMakeLists.txt  CMakePresets.json__  CXXModules.cmake  FUNDING.yml  GGEasy.pro  GX2_TOOLS.pro  GX3.pro  PATHS.cmake  PVS-Studio.cmake  PVS-Studio.pri  README.md  SUFFIX.cmake  clang-format.bat  clang-format.sh  cmake-format.sh  code_style.txt  copy tr.bat  defines.pri  icon.docx  lupdate.bat  msvc_make.bat  plugin.pri  pvs_headers.sh  staticlib.pri  suffix.pri
2geom/: CMakeLists.txt  basic-intersection.cpp  bezier-clipping.cpp  bezier-curve.cpp  bezier-utils.cpp  bezier.cpp  cairo-path-sink.cpp  circle.cpp  conic_section_clipper_impl.cpp  conicsec.cpp  convex-hull.cpp  coord.cpp  crossing.cpp  curve.cpp  d2-sbasis.cpp  ellipse.cpp  elliptical-arc-from-sbasis.cpp  elliptical-arc.cpp  geom.cpp  intersection-graph.cpp  line.cpp  nearest-time.cpp  parallelogram.cpp  parting-point.cpp  path-extrema.cpp  path-intersection.cpp  path-sink.cpp  path.cpp  pathvector.cpp  piecewise.cpp  planar-graph.h  point.cpp  polynomial.cpp  rect.cpp  recursive-bezier-intersection.cpp  sbasis-geometric.cpp  sbasis-math.cpp  sbasis-roots.cpp  sbasis-to-bezier.cpp  sbasis.cpp  (+7 more)
2geom/intervaltree/: interval_tree.cc
2geom/orphan-code/: arc-length.cpp  intersection-by-bezier-clipping.cpp  intersection-by-smashing.cpp  nearestpoint.cpp  redblack-toy.cpp  redblacktree.cpp  rtree.cpp
GGEasy/: CMakeLists.txt  ChangeLog.txt  G2G.pro  GGEasy.pri  GGEasy.pro  a_pch.h  aboutform.cpp  aboutform.h  aboutform.ui  app.h  application.h  colorselector.cpp  colorselector.h  datastream.h  debug.cpp  depthform.cpp  depthform.h  dockwidget.cpp  dockwidget.h  doublespinbox.cpp  doublespinbox.h  leakdetector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageoutput.h  mvector.h  myapp.rc  openingdialog.h  pathgroupnode.cpp  plugindialog.cpp  plugindialog.h  point.cpp  point.h  project.cpp  project.h  recent.cpp  recent.h  settings.cpp  (+12 more)
GGEasy/filetree/: filemodel.cpp  filemodel.h  foldernode.cpp  foldernode.h  layerdelegate.cpp  layerdelegate.h  radiodelegate.cpp  radiodelegate.h  sidedelegate.cpp  textdelegate.cpp  textdelegate.h  treeview.cpp  treeview.h  typedelegate.cpp
GGEasy/forms/: CMakeLists.txt  bridgeitem.cpp  bridgeitem.h  gcodepropertiesform.cpp  gcodepropertiesform.h  hatchingform.cpp  hatchingform.h  hatchingform.ui  pocketoffsetform.cpp  pocketoffsetform.h  pocketoffsetform.ui  pocketrasterform.cpp  pocketrasterform.h  profileform.cpp  profileform.h  profileform.ui  toolname.cpp  toolname.h  voronoiform.cpp  voronoiform.h  voronoiform.ui
GGEasy/gcode/: CMakeLists.txt  gccreator.cpp  gccreator.h  gcdrillitem.cpp  gcdrillitem.h  gcfile.cpp  gcfile.h  gch.cpp  gch.h  gchatching.cpp  gchatching.h  gcnode.cpp  gcnode.h  gcode.h  gcode.pri  gcparser.cpp  gcparser.h  gcplugin.cpp  gcplugin.h  gcpocketoffset.cpp  gcpocketoffset.h  gcpocketraster.cpp  gcpocketraster.h  gcprofile.cpp  gcprofile.h  gcthermal.cpp  gcthermal.h  gctypes.h  gcutils.cpp  gcutils.h  gcvoronoi.cpp  gcvoronoi.h  lasercreator.h.autosave
GGEasy/gi/: aperturepathitem.cpp  aperturepathitem.h  bridgeitem.cpp  bridgeitem.h  componentitem.cpp  componentitem.h  datapathitem.cpp  datapathitem.h  datasoliditem.cpp  datasoliditem.h  drillitem.cpp  drillitem.h  erroritem.cpp  erroritem.h  gcpathitem.cpp  gcpathitem.h  gerberitem.cpp  gerberitem.h  graphicsitem.cpp  graphicsitem.h  itemgroup.cpp  itemgroup.h  pathitem.cpp  pathitem.h
GGEasy/interfaces/: CMakeLists.txt  file.cpp  file.h  file.pri  fileplugin.h  node.cpp  node.h  parser.cpp  parser.h  pluginfile.h  plugintypes.h  shapepluginin.h
GGEasy/res/: resources.qrc
GGEasy/tooldatabase/: tool.cpp  tool.h  tooldatabase.cpp  tooldatabase.h  tooldatabase.ui  tooleditdialog.cpp  tooleditdialog.h  tooleditform.cpp  tooleditform.h  toolitem.cpp  toolitem.h  toolmodel.cpp  toolmodel.h  tooltreeview.cpp  tooltreeview.h
GGEasy/translations/: GGEasy_en.qm  GGEasy_en.ts  GGEasy_es.ts  GGEasy_fr.ts  GGEasy_pt.ts  GGEasy_ru.qm  GGEasy_ru.ts
ToolTest/: .gitignore  CMakeLists.txt  main.cpp
file_plugins/: CMakeLists.txt  pluginfile.h
file_plugins/dxf/: CMakeLists.txt  dxf.json  dxf_block.cpp  dxf_block.h  dxf_codedata.cpp  dxf_codedata.h  dxf_file.cpp  dxf_file.h  dxf_node.cpp  dxf_node.h  dxf_plugin.cpp  dxf_plugin.h  dxf_settingstab.cpp  dxf_settingstab.h  dxf_sourcedialog.cpp  dxf_sourcedialog.h  dxf_types.cpp  dxf_types.h
file_plugins/excellon/: CMakeLists.txt  drillitem.cpp  drillitem.h  excellon.h  excellon.json  excellondialog.cpp  excellondialog.h  excellondialog.ui  exfile.cpp  exfile.h  exformatstate.cpp  exh.cpp  exh.h  exnode.cpp  exnode.h  exparser.cpp  exparser.h  explugin.cpp  explugin.h  exsettingstab.cpp  exsettingstab.h  extypes.h
file_plugins/gerber/: CMakeLists.txt  compdialog.cpp  compdialog.h  compdialog.ui  compitem.cpp  compitem.h  compmodel.cpp  compmodel.h  compnode.cpp  compnode.h  componentitem.cpp  componentitem.h  compview.cpp  compview.h  gbr_file.cpp  (+54 more)
gcode_plugins/: CMakeLists.txt  gc_creator.cpp  gc_creator.h  gc_drillitem.cpp  gc_errordialog.cpp  gc_file.cpp  gc_file.h  gc_formsutil.cpp  gc_formsutil.h  gc_h.cpp  gc_node.cpp  gc_odeplugininterface.cpp  gc_odeplugininterface.h  gc_odepropertiesform.cpp  gc_plugin.cpp  gc_plugin.h  gc_types.h  gc_utils.cpp  gc_utils.h  gccreator.cpp  gccreator.h  gcfile.h  gch.cpp  gcode.h  gcodeplugininterface.cpp  gcodeplugininterface.h  gcodepropertiesform.cpp  gcodepropertiesform.h  gcodepropertiesform.ui  gcplugin.cpp  gcplugin.h  gcutils.cpp  gcutils.h
ggeasy/: CMakeLists.txt  ChangeLog.txt  a_pch.h  aboutform.cpp  aboutform.h  aboutform.ui  config.h  debug.cpp  main.cpp  mainwindow.cpp  mainwindow.h  messageoutput.h  myapp.rc  pathgroupnode.PVS-Studio.i  pathgroupnode.cpp  pathgroupnode.h  plugindialog.cpp  plugindialog.h  recent.cpp  recent.h  settingsdialog.ui  stacktrace_and_output.h  version.h  version.h.in  version.h__  versioninfo.rc.in
plugins/: CMakeLists.txt  description.json.in
shape_plugins/: CMakeLists.txt  shapepluginin.h
static_libs/: CMakeLists.txt
(+1869 files in other folders)
